--- a/text_analyzer/CI/Jenkinsfile
+++ b/text_analyzer/CI/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stages {
         stage('Lint') {
             steps {
-                dir('%WORKSPACE%\\text_analyzer') {
+                dir('.\\text_analyzer') {
                     bat 'echo %WORKSPACE%'
                     bat 'task lint'
                 }
@@ -13,7 +13,7 @@ pipeline {
 
         stage('Build Package') {
             steps {
-                dir('..') {
+                dir('.\\text_analyzer') {
                     bat 'task build ver=1.2.3'
                 }
             }
@@ -22,7 +22,7 @@ pipeline {
 
         stage('Test') {
             steps {
-                dir('..') {
+                dir('.\\text_analyzer') {
                     bat 'task test'
                 }
             }
