adding emoji printing ability in Jenkinsfile

--- a/text_analyzer/CI/Jenkinsfile
+++ b/text_analyzer/CI/Jenkinsfile
@@ -23,6 +23,8 @@ pipeline {
         stage('Test') {
             steps {
                 dir('.\\text_analyzer') {
+                    bat 'set PYTHONUTF8=1'
+                    bat 'chcp 65001'
                     bat 'task test'
                 }
             }
