--- a/text_analyzer/CI/Jenkinsfile
+++ b/text_analyzer/CI/Jenkinsfile
@@ -3,19 +3,15 @@ def isTagBuild() {
     def tagPattern = ~/^v\d+\.\d+\.\d+$/    
     // Check if GIT_TAG is set (e.g., from a tag push event)
     echo "${env.GIT_TAG}"
+
+    echo """${sh(script: 'git describe --tags --exact-match || true').trim()}"""
+
+    echo """${sh(script: 'git describe --tags --exact-match || true', returnStdout: true).trim()}"""
+
+
     if (env.GIT_TAG && env.GIT_TAG != "" && env.GIT_TAG ==~ tagPattern ) {
         return true
     }
-    
-    echo "${sh(
-        script: "git describe --tags --exact-match || true",
-        returnStdout: true
-    ).trim()}"
-
-    echo "${sh(
-        script: "git describe --tags --exact-match || true",
-        returnStdout: false
-    ).trim()}"
 
     // If the tag doesn't match the format, return false
     return false
