--- a/text_analyzer/CI/Jenkinsfile
+++ b/text_analyzer/CI/Jenkinsfile
@@ -20,6 +20,7 @@ pipeline {
             }
             steps {
                 dir('.\\text_analyzer') {
+                    bat 'task clean'
                     bat 'task build ver=1.2.3'
                 }
             }
