--- a/text_analyzer/CI/Jenkinsfile
+++ b/text_analyzer/CI/Jenkinsfile
@@ -41,21 +41,24 @@ pipeline {
 }
 
 
-
 def isTagBuild() {
     def tagPattern = java.util.regex.Pattern.compile('^v\\d+\\.\\d+\\.\\d+$')
 
     echo "GIT_TAG env: ${env.GIT_TAG}"
-    try{
-        def tagOutput = bat( script: 'git describe --tags --exact-match || echo ""', returnStdout: true ).trim()
+
+    def tagOutput = '' // declare outside try so it's accessible after
+    try {
+        tagOutput = bat(
+            script: 'git describe --tags --exact-match || echo ""',
+            returnStdout: true
+        ).trim()
     } catch (err) {
         echo "No tag detected, skipping stages."
         return false
     }
 
     def tag = tagOutput.readLines().last().trim()
-
-
     echo "Detected tag: ${tag}"
+
     return tag ==~ tagPattern
 }
