--- a/text_analyzer/CI/Jenkinsfile
+++ b/text_analyzer/CI/Jenkinsfile
@@ -1,9 +1,8 @@
-// Global variable
-def GIT_TAG_VALUE = ''
+def GIT_TAG_VALUE = ""
 
 pipeline {
     agent any
-
+    
     stages {
 
         stage('Lint') {
@@ -58,8 +57,8 @@ def isTagBuild() {
         return false
     }
 
-    GIT_TAG_VALUE = tagOutput.readLines().last().trim()
-    echo "Detected tag: ${tag}"
+    GIT_TAG_VALUE  = tagOutput.readLines().last().trim()
+    echo "Detected tag: ${GIT_TAG_VALUE}"
 
     return GIT_TAG_VALUE ==~ tagPattern
 }
