add docker to jenkinsfile

--- a/text_analyzer/CI/Jenkinsfile
+++ b/text_analyzer/CI/Jenkinsfile
@@ -36,6 +36,18 @@ pipeline {
                 }
             }
         }
+
+        stage('build and run dockerfile') {
+            when{
+                expression{isTagBuild()}
+            }
+            steps {
+                dir('.\\text_analyzer') {
+                    bat 'task docker:build ver=\"${env.GIT_TAG_VALUE.replaceFirst('^v','')}\"'
+                    bat 'task docker:run ver=\"${env.GIT_TAG_VALUE.replaceFirst('^v','')}\"'
+                }
+            }
+        }
     }
 }
 
